apps/home-assistant-ott/home-assistant-ott.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-oto
  namespace: home-assistant-oto
spec:
  selector:
    matchLabels:
      app: home-assistant-oto
  replicas: 1
  template:
    metadata:
      labels:
        app: home-assistant-oto
    spec:
      containers:
        - name: home-assistant-oto
          image: ghcr.io/tobimichael96/home-assistant-ott:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: docker-hub
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-oto
  namespace: home-assistant-oto
spec:
  selector:
    app: home-assistant-oto
  ports:
    - protocol: TCP
      port: 8000
