apps/home-assistant-ott/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-oto
  namespace: home-assistant-oto
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - ha-oto.tmem.de
      secretName: home-assistant-oto-tls
  rules:
    - host: ha-oto.tmem.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-oto
                port:
                  number: 8000
